discussion/kv_engine/147364/147364_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-44590: Maintain dropped collections from replayPrecommitHook

Prior to this fix if the replay function was used (because flush and
compaction interleaved) the dropped collections meta-data wasn't being
maintained. The associated MB identified a case where the meta-data
stored a dropped collection which had been fully purged.

This fix updates replayPrecommitHook so that the dropped collection
meta-data is maintained. The new code has to consider that new
collections could of been dropped during the 'interleave', this means
that the final output is no longer just the removal of the  dropped
collection data, but is either deleted or just the newly dropped
collections (so any following full compaction can purge the new dropped
collection).

Change-Id: I9eeb65c8cbaa195ec451087439fca5ddf9818fe8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-03-04 10:08:50.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-03-04 10:34:13.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7422/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49: error: no member named "getDroppedCollections" in "Collections::VB::EraserContext" [clang-diagnostic-error]
                        hook_ctx.eraserContext->getDroppedCollections());
                                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7422/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49:
error: no member named "getDroppedCollections" in "Collections::VB::EraserContext" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/7422/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34005/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1164): error C2039: "getDroppedCollections": is not a member of "Collections::VB::EraserContext" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/34005/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29214/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49:
error: no member named "getDroppedCollections" in "Collections::VB::EraserContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/29214/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9386/ : FAILURE

Compile error at [2021-03-04T10:31:36.710Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49:
error: no member named "getDroppedCollections" in "Collections::VB::EraserContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/9386/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16934/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9031/ : FAILURE

Compile error at [2021-03-04T10:32:22.177Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49:
error: ?class Collections::VB::EraserContext? has no member named ?getDroppedCollections?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/9031/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9172/ : FAILURE

Compile error at [2021-03-04T10:32:05.794Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49:
error: ?class Collections::VB::EraserContext? has no member named ?getDroppedCollections?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/9172/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8088/ : FAILURE

Compile error at [2021-03-04T10:11:14.989Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1164:49:
error: no member named "getDroppedCollections" in "Collections::VB::EraserContext"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/8088/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5960/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
